tests-integration/fixtures/checking/1772442720_prim_type_error_fail/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Proxy :: forall (k :: Type) (@a :: (k :: Type)). Proxy @(k :: Type) (a :: (k :: Type))
failBasic ::
  forall (a :: Type). Fail (Text "This operation is not allowed") => (a :: Type) -> (a :: Type)
useFailBasic :: Int
failComplex ::
  forall (t :: Type) (a :: (t :: Type)).
    Fail (Above (Text "Error:") (Beside (Text "Type ") (Quote @(t :: Type) (a :: (t :: Type))))) =>
    Proxy @(t :: Type) (a :: (t :: Type)) -> Proxy @(t :: Type) (a :: (t :: Type))
useFailComplex :: Proxy @Type String

Types
Proxy :: forall (k :: Type). (k :: Type) -> Type

Roles
Proxy = [Phantom]

Diagnostics
error[CustomFailure]: This operation is not allowed
  --> 11:1..11:20
   |
11 | useFailBasic :: Int
   | ^~~~~~~~~~~~~~~~~~~
error[CustomFailure]: Error:
Type String
  --> 17:1..17:31
   |
17 | useFailComplex :: Proxy String
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
